changed z-index in _layout.css of _sass to fix menu/art overlap

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,7 +8,7 @@
 
     // Positioning context for the mobile navigation icon
     position: relative;
-    z-index : 10000;
+    z-index : 9000;
 }
 
 .site-title {
